<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph_work_field"
    app:startDestination="@id/Second2Fragment"
    >
    <fragment
        android:id="@+id/Second2Fragment"
        android:name="com.example.boterprojectjunior.Second2Fragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second2">

        <action
            android:id="@+id/action_from_WorkField_To_GeneratorActivity"
            app:destination="@+id/GeneratorActivity"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_close_enter"
            />
        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/SignInFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_MainActivity"
            app:destination="@id/MainActivity" />
    </fragment>
    <activity
        android:id="@+id/MainActivity"
        android:name="com.example.boterprojectjunior.MainActivity"
        android:label="@string/title_main_activity"
        tools:layout="@layout/activity_main" >
    </activity>
    <activity
        android:id="@+id/GeneratorActivity"
        android:name="com.example.boterprojectjunior.GeneratorActivity"
        android:label="@string/title_activity_generator"
        tools:layout="@layout/activity_generator">
</activity>





</navigation>