<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="20dp"
    >
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/bot_info_string"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/reg_blue"
                android:textAlignment="center"
                android:textSize="30dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bot_name"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/bot_name"
                android:inputType="textPersonName"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/bot_token"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/token_bot"
                android:layout_weight="1"
                android:inputType="textPersonName"
                 />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/register"
                android:layout_weight="1"
                android:background="@color/sky_blue"
                android:textColor="@color/white"
                android:fontFamily="@font/montserrat_semibolditalic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_it" />
        </TableRow>

    </TableLayout>
</androidx.cardview.widget.CardView>